build/log/idf_py_stderr_output_428190
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/components/ota_diag/ota_diag.c: In function 'handle_trigger_diag':
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/components/ota_diag/ota_diag.c:185:5: error: 'stream_paused' undeclared (first use in this function)
  185 |     stream_paused = true;
      |     ^~~~~~~~~~~~~
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/components/ota_diag/ota_diag.c:185:5: note: each undeclared identifier is reported only once for each function it appears in
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/components/ota_diag/ota_diag.c: In function 'handle_trigger_ota':
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/components/ota_diag/ota_diag.c:273:5: error: 'stream_paused' undeclared (first use in this function)
  273 |     stream_paused = true;
      |     ^~~~~~~~~~~~~
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/components/ota_diag/ota_diag.c: At top level:
/home/keithuncouth/esp-idf-v5.3.2/examples/system/ota/simple_ota_example/components/ota_diag/ota_diag.c:224:13: warning: 'simple_ota_example_task' defined but not used [-Wunused-function]
  224 | static void simple_ota_example_task(void *pvParameter)
      |             ^~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/ota_diag/CMakeFiles/__idf_ota_diag.dir/build.make:76: esp-idf/ota_diag/CMakeFiles/__idf_ota_diag.dir/ota_diag.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5857: esp-idf/ota_diag/CMakeFiles/__idf_ota_diag.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
